; ModuleID = '/home/carl/AnghaBench/freebsd/sys/nlm/extr_nlm_advlock.c_nlm_client_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/nlm/extr_nlm_advlock.c_nlm_client_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nlm_svid_lock = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"NLM svid lock\00", align 1
@MTX_DEF = common dso_local global i32 0, align 4
@PID_MAX = common dso_local global i64 0, align 8
@INT_MAX = common dso_local global i32 0, align 4
@nlm_svid_allocator = common dso_local global i32 0, align 4
@NLM_SVID_HASH_SIZE = common dso_local global i32 0, align 4
@nlm_file_svids = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @nlm_client_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nlm_client_init(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @MTX_DEF, align 4
  %5 = call i32 @mtx_init(i32* @nlm_svid_lock, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32* null, i32 %4)
  %6 = load i64, i64* @PID_MAX, align 8
  %7 = add nsw i64 %6, 2
  %8 = load i32, i32* @INT_MAX, align 4
  %9 = call i32 @new_unrhdr(i64 %7, i32 %8, i32* @nlm_svid_lock)
  store i32 %9, i32* @nlm_svid_allocator, align 4
  store i32 0, i32* %3, align 4
  br label %10

10:                                               ; preds = %20, %1
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @NLM_SVID_HASH_SIZE, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %23

14:                                               ; preds = %10
  %15 = load i32*, i32** @nlm_file_svids, align 8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  %19 = call i32 @LIST_INIT(i32* %18)
  br label %20

20:                                               ; preds = %14
  %21 = load i32, i32* %3, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %3, align 4
  br label %10

23:                                               ; preds = %10
  ret void
}

declare dso_local i32 @mtx_init(i32*, i8*, i32*, i32) #1

declare dso_local i32 @new_unrhdr(i64, i32, i32*) #1

declare dso_local i32 @LIST_INIT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
